<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/brujula"
    tools:context=".registro">

    <ImageButton
        android:id="@+id/registro_btnRegresar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#DEDEE3"
        android:tint="#9C5539"
        app:srcCompat="?attr/homeAsUpIndicator" />

    <TextView
        android:id="@+id/registrotextTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="92dp"
        android:text="@string/registro_titulo"
        android:textColor="#9C5539"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="203dp"
        android:layout_height="136dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagen3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/correo_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/registro_email"
            android:inputType="textEmailAddress"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="@android:color/darker_gray" />

        <EditText
            android:id="@+id/pass_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/registro_password"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <EditText
            android:id="@+id/confirmpass_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/txt_confirmarcontra"
            android:inputType="textPassword"
            android:paddingLeft="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp" />

        <Button
            android:id="@+id/crear_registro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#9C5539"
            android:text="@string/registro_crearCuenta" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>