<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E5E5"
    android:backgroundTint="#E5E5E5"
    tools:context=".principal">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="312dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/login_txtCorreo"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/loggin_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/login_txtcontraseña"
            android:layout_width="match_parent"
            android:layout_height="37dp"
            android:layout_marginBottom="15dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/loggin_password"
            android:inputType="textPassword"
            android:password="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btnacceder">

        <Button
            android:id="@+id/btnGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#9C5539"
            android:text="@string/loggin_google" />

        <Button
            android:id="@+id/btnFace"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#9C5539"
            android:text="@string/loggin_faceboock" />

        <Button
            android:id="@+id/crear_principal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#001218"
            android:text="@string/Cuenta" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="45dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/icons8marcadores64" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="208dp"
        android:layout_height="106dp"
        android:layout_marginTop="164dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/imagen3" />

    <Button
        android:id="@+id/login_btnacceder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="#BE9C5539"
        android:text="@string/loggin_acceder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ó"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btnacceder" />

</androidx.constraintlayout.widget.ConstraintLayout>