<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".crearcontacto">

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="300dp"
        android:layout_height="69dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/imagen3" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="141dp"
        tools:srcCompat="@tools:sample/avatars" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="300dp"
        android:layout_marginBottom="230dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/Persona_crear"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:ems="10"
            android:hint="@string/crear_persona"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/parentesto_crear"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:ems="10"
            android:hint="@string/crear_parentesco"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/latitud_crear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_crear_latitud"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/longitud_crear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/txt_crear_longitud"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_cancelarpersona"
        android:layout_width="157dp"
        android:layout_height="68dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#BE9C5539"
        android:text="CANCELAR"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.835"
        app:layout_constraintStart_toEndOf="@+id/btn_crearpersona"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <Button
        android:id="@+id/btn_crearpersona"
        android:layout_width="157dp"
        android:layout_height="68dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#BE9C5539"
        android:text="Crear"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

</androidx.constraintlayout.widget.ConstraintLayout>